--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/logo/logo.png'
 
 flutter:
   uses-material-design: true
